After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 778028 - decklinkaudiosrc: Fix get_caps returning EMPTY
decklinkaudiosrc: Fix get_caps returning EMPTY
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal normal
: 1.11.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-02-01 13:15 UTC by Vivia Nikolaidou
Modified: 2017-02-01 13:19 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
0001-decklinkaudiosrc-Fix-get_caps-returning-EMPTY.patch (1.57 KB, patch)
2017-02-01 13:16 UTC, Vivia Nikolaidou
committed Details | Review

Description Vivia Nikolaidou 2017-02-01 13:15:54 UTC
If get_caps is called before negotiation, channels_found will be 0 and
    therefore won't intersect with the template caps.
Comment 1 Vivia Nikolaidou 2017-02-01 13:16:41 UTC
Created attachment 344708 [details] [review]
0001-decklinkaudiosrc-Fix-get_caps-returning-EMPTY.patch
Comment 2 Sebastian Dröge (slomo) 2017-02-01 13:18:42 UTC
commit 21a9a8985163c6cdadb673af369401f974a8afe9
Author: Vivia Nikolaidou <vivia@toolsonair.com>
Date:   Wed Feb 1 15:13:32 2017 +0200

    decklinkaudiosrc: Fix get_caps returning EMPTY
    
    If get_caps is called before negotiation, channels_found will be 0 and
    therefore won't intersect with the template caps.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=778028